# MultiThreaded-Asset-Loader

./: CMakeLists.txt  LogFile.txt  NormeConfig.txt
CMake/: FindIrrklang.cmake
Core/include/: RessourceManager.h  ThreadPool.h
Core/src/: RessourceManager.cpp  ThreadPool.cpp  main.cpp
LibGL/include/: Application.h  Camera.h  GameObject.h  Light.h  Mesh.h  Model.h  Resourcesmanager.h  RessourceManager.h  Shader.h  Singleton.h  Texture.h  ThreadPool.h  Transfrom.h
LibGL/include/Core/DataStructure/: Graph.h
LibGL/include/Core/Debug/: Assertion.h  Log.h
LibGL/include/LowRenderer/: AssimpMesh.h  Camera.h  DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
LibGL/include/Ressource/: AssimpMesh.h  AssimpModel.h  AssimpShader.h  IResource.h  Mesh.h  Model.h  ResourcesManager.h  Shader.h  Texture.h  Vertex.h
LibGL/shaders/: Basic.glsl  BasicFragShader.glsl  BasicVertexShader.glsl  DebugDrawVertexShader.glsl  LightFragShader.glsl  LightVertexShader.glsl  core_fragment.glsl  core_vertex.glsl
LibGL/src/: Application.cpp  Application.cpp~RF70d17c28.TMP  Camera.cpp  GLFWApp.cpp  GameObject.cpp  Light.cpp  Mesh.cpp  Model.cpp  Resourcesmanager.cpp  RessourceManager.cpp  Shader.cpp  Singleton.cpp  Texture.cpp  ThreadPool.cpp  Transfrom.cpp
LibGL/src/Core/DataStructure/: Graph.cpp
LibGL/src/Core/Debug/: Assertion.cpp  Log.cpp
LibGL/src/LowRenderer/: Camera.cpp  DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
LibGL/src/Ressource/: AssimpModel.cpp  Mesh.cpp  Model.cpp  ResourcesManager.cpp  Shader.cpp
LibMaths/: TestVector2D.cpp
LibMaths/Mat4/: Mat4.h
LibMaths/Shapes2D/: Shapes2D.h
LibMaths/Vec2/: Vec2.h
LibMaths/Vec3/: Vec3.h
LibMaths/Vec4/: Vec4.h
